b_visual css, 반응형 수정중

--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
     <!-- 소셜 미디어에서 공유될 때 사용되는 URL -->
     <meta property="og:url" content="https://numberone-one.vercel.app/" />
     <!-- 소셜 미디어에서 페이지가 공유될 때 표시되는 이미지 -->
-    <meta
-      property="og:image"
-      content="https://numberone-one.vercel.app/images/jisu/pick/1.%ED%94%84%EB%A0%88%EC%89%AC.jpg" />
+    <meta property="og:image" content="https://numberone-one.vercel.app/images/jisu/pick/1.%ED%94%84%EB%A0%88%EC%89%AC.jpg" />
     <!-- 소셜 미디어에서 페이지가 공유될 때 사용되는 설명 -->
     <meta property="og:description" content="팀 프로젝트 numberone 웹사이트입니다." />
 
@@ -88,18 +86,12 @@
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-PTWVF73K"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"></iframe
-    ></noscript>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PTWVF73K" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <!-- 전체레이아웃 -->
     <div class="wrap">
-       <!-- a_header -->
-       <header class="a_header">
+      <!-- a_header -->
+      <header class="a_header">
         <div class="wrap-inner">
           <div class="header-left">
             <!-- 햄버거 메뉴 버튼 -->
@@ -228,19 +220,13 @@
                   <a href="#"><img src="images/jihye/a_header/gnb/gnb_vest.png" alt="베스트" /><span>베스트</span></a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><img src="images/jihye/a_header/gnb/gnb_collabo.png" alt="콜라보" /><span>콜라보</span></a
-                  >
+                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_collabo.png" alt="콜라보" /><span>콜라보</span></a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><img src="images/jihye/a_header/gnb/gnb_limited.png" alt="리미티드" /><span>리미티드</span></a
-                  >
+                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_limited.png" alt="리미티드" /><span>리미티드</span></a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><img src="images/jihye/a_header/gnb/gnb_newproduts.png" alt="신제품" /><span>신제품</span></a
-                  >
+                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_newproduts.png" alt="신제품" /><span>신제품</span></a>
                 </li>
                 <li>
                   <a href="#"><img src="images/jihye/a_header/gnb/gnb_hair.png" alt="헤어" /><span>헤어</span></a>
@@ -249,9 +235,7 @@
                   <a href="#"><img src="images/jihye/a_header/gnb/gnb_face.png" alt="페이스" /><span>페이스</span></a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><img src="images/jihye/a_header/gnb/gnb_makeup.png" alt="메이크업" /><span>메이크업</span></a
-                  >
+                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_makeup.png" alt="메이크업" /><span>메이크업</span></a>
                 </li>
                 <li>
                   <a href="#"><img src="images/jihye/a_header/gnb/gnb_gift.png" alt="기프트" /><span>기프트</span></a>
@@ -266,14 +250,10 @@
                   <a href="#"><img src="images/jihye/a_header/gnb/gnb_body.png" alt="보디" /><span>보디</span></a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><img src="images/jihye/a_header/gnb/gnb_perfume.png" alt="프래그런스" /><span>프래그런스</span></a
-                  >
+                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_perfume.png" alt="프래그런스" /><span>프래그런스</span></a>
                 </li>
                 <li>
-                  <a href="#"
-                    ><img src="images/jihye/a_header/gnb/gnb_accessory.png" alt="악세서리" /><span>악세서리</span></a
-                  >
+                  <a href="#"><img src="images/jihye/a_header/gnb/gnb_accessory.png" alt="악세서리" /><span>악세서리</span></a>
                 </li>
                 <li>
                   <a href="#"><img src="images/jihye/a_header/gnb/gnb_swag.png" alt="스웨그" /><span>스웨그</span></a>
@@ -326,18 +306,9 @@
             <!-- 슬라이드1 -->
             <li class="swiper-slide">
               <picture>
-                <img
-                  src="images/jihye/b_visual slide/l_b_visual slide_2.png"
-                  alt="가족피크닉 1920px"
-                  class="visual-de" />
-                <img
-                  src="images/jihye/b_visual slide/m_b_visual slide_2.png"
-                  alt="가족피크닉 768px "
-                  class="visual-ta" />
-                <img
-                  src="images/jihye/b_visual slide/s_b_visual slide_2.png"
-                  alt="가족피크닉 390px"
-                  class="visual-mb" />
+                <img src="images/jihye/b_visual slide/l_b_visual slide_2.png" alt="가족피크닉 1920px" class="visual-de" />
+                <img src="images/jihye/b_visual slide/m_b_visual slide_2.png" alt="가족피크닉 768px " class="visual-ta" />
+                <img src="images/jihye/b_visual slide/s_b_visual slide_2.png" alt="가족피크닉 390px" class="visual-mb" />
               </picture>
               <div class="visual-inner">
                 <div class="box-txt">
@@ -392,18 +363,9 @@
             <!-- 슬라이드4 -->
             <li class="swiper-slide">
               <picture>
-                <img
-                  src="images/jihye/b_visual slide/l_b_visual slide_4.png"
-                  alt="나이트케어 1920px"
-                  class="visual-de" />
-                <img
-                  src="images/jihye/b_visual slide/m_b_visual slide_4.png"
-                  alt="나이트케어 768px "
-                  class="visual-ta" />
-                <img
-                  src="images/jihye/b_visual slide/s_b_visual slide_4.png"
-                  alt="나이트케어 390px"
-                  class="visual-mb" />
+                <img src="images/jihye/b_visual slide/l_b_visual slide_4.png" alt="나이트케어 1920px" class="visual-de" />
+                <img src="images/jihye/b_visual slide/m_b_visual slide_4.png" alt="나이트케어 768px " class="visual-ta" />
+                <img src="images/jihye/b_visual slide/s_b_visual slide_4.png" alt="나이트케어 390px" class="visual-mb" />
               </picture>
               <div class="wrap-inner">
                 <div class="box-txt">
@@ -460,12 +422,7 @@
                       <ul class="review-score">
                         <li>
                           <span>
-                            <svg
-                              width="74"
-                              height="14"
-                              viewBox="0 0 74 14"
-                              fill="none"
-                              xmlns="http://www.w3.org/2000/svg">
+                            <svg width="74" height="14" viewBox="0 0 74 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <path
                                 d="M6.46196 1.09019C6.68205 0.644245 7.31795 0.644244 7.53804 1.09019L8.91765 3.88558C9.00504 4.06266 9.17398 4.1854 9.36941 4.2138L12.4543 4.66206C12.9464 4.73357 13.1429 5.33835 12.7868 5.68548L10.5546 7.86138C10.4132 7.99922 10.3486 8.19782 10.382 8.39246L10.909 11.4649C10.993 11.955 10.4786 12.3288 10.0384 12.0974L7.27921 10.6468C7.10441 10.5549 6.89559 10.5549 6.7208 10.6468L3.96159 12.0974C3.52141 12.3288 3.00695 11.955 3.09102 11.4649L3.61798 8.39246C3.65136 8.19782 3.58683 7.99922 3.44542 7.86138L1.21317 5.68548C0.857064 5.33836 1.05357 4.73357 1.5457 4.66206L4.63059 4.2138C4.82602 4.1854 4.99496 4.06266 5.08235 3.88558L6.46196 1.09019Z"
                                 fill="#222222" />
@@ -517,12 +474,7 @@
                       <ul class="review-score">
                         <li>
                           <span>
-                            <svg
-                              width="74"
-                              height="14"
-                              viewBox="0 0 74 14"
-                              fill="none"
-                              xmlns="http://www.w3.org/2000/svg">
+                            <svg width="74" height="14" viewBox="0 0 74 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <path
                                 d="M6.46196 1.09019C6.68205 0.644245 7.31795 0.644244 7.53804 1.09019L8.91765 3.88558C9.00504 4.06266 9.17398 4.1854 9.36941 4.2138L12.4543 4.66206C12.9464 4.73357 13.1429 5.33835 12.7868 5.68548L10.5546 7.86138C10.4132 7.99922 10.3486 8.19782 10.382 8.39246L10.909 11.4649C10.993 11.955 10.4786 12.3288 10.0384 12.0974L7.27921 10.6468C7.10441 10.5549 6.89559 10.5549 6.7208 10.6468L3.96159 12.0974C3.52141 12.3288 3.00695 11.955 3.09102 11.4649L3.61798 8.39246C3.65136 8.19782 3.58683 7.99922 3.44542 7.86138L1.21317 5.68548C0.857064 5.33836 1.05357 4.73357 1.5457 4.66206L4.63059 4.2138C4.82602 4.1854 4.99496 4.06266 5.08235 3.88558L6.46196 1.09019Z"
                                 fill="#222222" />
@@ -574,12 +526,7 @@
                       <ul class="review-score">
                         <li>
                           <span>
-                            <svg
-                              width="74"
-                              height="14"
-                              viewBox="0 0 74 14"
-                              fill="none"
-                              xmlns="http://www.w3.org/2000/svg">
+                            <svg width="74" height="14" viewBox="0 0 74 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <path
                                 d="M6.46196 1.09019C6.68205 0.644245 7.31795 0.644244 7.53804 1.09019L8.91765 3.88558C9.00504 4.06266 9.17398 4.1854 9.36941 4.2138L12.4543 4.66206C12.9464 4.73357 13.1429 5.33835 12.7868 5.68548L10.5546 7.86138C10.4132 7.99922 10.3486 8.19782 10.382 8.39246L10.909 11.4649C10.993 11.955 10.4786 12.3288 10.0384 12.0974L7.27921 10.6468C7.10441 10.5549 6.89559 10.5549 6.7208 10.6468L3.96159 12.0974C3.52141 12.3288 3.00695 11.955 3.09102 11.4649L3.61798 8.39246C3.65136 8.19782 3.58683 7.99922 3.44542 7.86138L1.21317 5.68548C0.857064 5.33836 1.05357 4.73357 1.5457 4.66206L4.63059 4.2138C4.82602 4.1854 4.99496 4.06266 5.08235 3.88558L6.46196 1.09019Z"
                                 fill="#222222" />
@@ -631,12 +578,7 @@
                       <ul class="review-score">
                         <li>
                           <span>
-                            <svg
-                              width="74"
-                              height="14"
-                              viewBox="0 0 74 14"
-                              fill="none"
-                              xmlns="http://www.w3.org/2000/svg">
+                            <svg width="74" height="14" viewBox="0 0 74 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <path
                                 d="M6.46196 1.09019C6.68205 0.644245 7.31795 0.644244 7.53804 1.09019L8.91765 3.88558C9.00504 4.06266 9.17398 4.1854 9.36941 4.2138L12.4543 4.66206C12.9464 4.73357 13.1429 5.33835 12.7868 5.68548L10.5546 7.86138C10.4132 7.99922 10.3486 8.19782 10.382 8.39246L10.909 11.4649C10.993 11.955 10.4786 12.3288 10.0384 12.0974L7.27921 10.6468C7.10441 10.5549 6.89559 10.5549 6.7208 10.6468L3.96159 12.0974C3.52141 12.3288 3.00695 11.955 3.09102 11.4649L3.61798 8.39246C3.65136 8.19782 3.58683 7.99922 3.44542 7.86138L1.21317 5.68548C0.857064 5.33836 1.05357 4.73357 1.5457 4.66206L4.63059 4.2138C4.82602 4.1854 4.99496 4.06266 5.08235 3.88558L6.46196 1.09019Z"
                                 fill="#222222" />
@@ -688,12 +630,7 @@
                       <ul class="review-score">
                         <li>
                           <span>
-                            <svg
-                              width="74"
-                              height="14"
-                              viewBox="0 0 74 14"
-                              fill="none"
-                              xmlns="http://www.w3.org/2000/svg">
+                            <svg width="74" height="14" viewBox="0 0 74 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <path
                                 d="M6.46196 1.09019C6.68205 0.644245 7.31795 0.644244 7.53804 1.09019L8.91765 3.88558C9.00504 4.06266 9.17398 4.1854 9.36941 4.2138L12.4543 4.66206C12.9464 4.73357 13.1429 5.33835 12.7868 5.68548L10.5546 7.86138C10.4132 7.99922 10.3486 8.19782 10.382 8.39246L10.909 11.4649C10.993 11.955 10.4786 12.3288 10.0384 12.0974L7.27921 10.6468C7.10441 10.5549 6.89559 10.5549 6.7208 10.6468L3.96159 12.0974C3.52141 12.3288 3.00695 11.955 3.09102 11.4649L3.61798 8.39246C3.65136 8.19782 3.58683 7.99922 3.44542 7.86138L1.21317 5.68548C0.857064 5.33836 1.05357 4.73357 1.5457 4.66206L4.63059 4.2138C4.82602 4.1854 4.99496 4.06266 5.08235 3.88558L6.46196 1.09019Z"
                                 fill="#222222" />
@@ -745,12 +682,7 @@
                       <ul class="review-score">
                         <li>
                           <span>
-                            <svg
-                              width="74"
-                              height="14"
-                              viewBox="0 0 74 14"
-                              fill="none"
-                              xmlns="http://www.w3.org/2000/svg">
+                            <svg width="74" height="14" viewBox="0 0 74 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <path
                                 d="M6.46196 1.09019C6.68205 0.644245 7.31795 0.644244 7.53804 1.09019L8.91765 3.88558C9.00504 4.06266 9.17398 4.1854 9.36941 4.2138L12.4543 4.66206C12.9464 4.73357 13.1429 5.33835 12.7868 5.68548L10.5546 7.86138C10.4132 7.99922 10.3486 8.19782 10.382 8.39246L10.909 11.4649C10.993 11.955 10.4786 12.3288 10.0384 12.0974L7.27921 10.6468C7.10441 10.5549 6.89559 10.5549 6.7208 10.6468L3.96159 12.0974C3.52141 12.3288 3.00695 11.955 3.09102 11.4649L3.61798 8.39246C3.65136 8.19782 3.58683 7.99922 3.44542 7.86138L1.21317 5.68548C0.857064 5.33836 1.05357 4.73357 1.5457 4.66206L4.63059 4.2138C4.82602 4.1854 4.99496 4.06266 5.08235 3.88558L6.46196 1.09019Z"
                                 fill="#222222" />
@@ -802,12 +734,7 @@
                       <ul class="review-score">
                         <li>
                           <span>
-                            <svg
-                              width="74"
-                              height="14"
-                              viewBox="0 0 74 14"
-                              fill="none"
-                              xmlns="http://www.w3.org/2000/svg">
+                            <svg width="74" height="14" viewBox="0 0 74 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <path
                                 d="M6.46196 1.09019C6.68205 0.644245 7.31795 0.644244 7.53804 1.09019L8.91765 3.88558C9.00504 4.06266 9.17398 4.1854 9.36941 4.2138L12.4543 4.66206C12.9464 4.73357 13.1429 5.33835 12.7868 5.68548L10.5546 7.86138C10.4132 7.99922 10.3486 8.19782 10.382 8.39246L10.909 11.4649C10.993 11.955 10.4786 12.3288 10.0384 12.0974L7.27921 10.6468C7.10441 10.5549 6.89559 10.5549 6.7208 10.6468L3.96159 12.0974C3.52141 12.3288 3.00695 11.955 3.09102 11.4649L3.61798 8.39246C3.65136 8.19782 3.58683 7.99922 3.44542 7.86138L1.21317 5.68548C0.857064 5.33836 1.05357 4.73357 1.5457 4.66206L4.63059 4.2138C4.82602 4.1854 4.99496 4.06266 5.08235 3.88558L6.46196 1.09019Z"
                                 fill="#222222" />
@@ -849,12 +776,7 @@
                       <ul class="review-score">
                         <li>
                           <span>
-                            <svg
-                              width="74"
-                              height="14"
-                              viewBox="0 0 74 14"
-                              fill="none"
-                              xmlns="http://www.w3.org/2000/svg">
+                            <svg width="74" height="14" viewBox="0 0 74 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <path
                                 d="M6.46196 1.09019C6.68205 0.644245 7.31795 0.644244 7.53804 1.09019L8.91765 3.88558C9.00504 4.06266 9.17398 4.1854 9.36941 4.2138L12.4543 4.66206C12.9464 4.73357 13.1429 5.33835 12.7868 5.68548L10.5546 7.86138C10.4132 7.99922 10.3486 8.19782 10.382 8.39246L10.909 11.4649C10.993 11.955 10.4786 12.3288 10.0384 12.0974L7.27921 10.6468C7.10441 10.5549 6.89559 10.5549 6.7208 10.6468L3.96159 12.0974C3.52141 12.3288 3.00695 11.955 3.09102 11.4649L3.61798 8.39246C3.65136 8.19782 3.58683 7.99922 3.44542 7.86138L1.21317 5.68548C0.857064 5.33836 1.05357 4.73357 1.5457 4.66206L4.63059 4.2138C4.82602 4.1854 4.99496 4.06266 5.08235 3.88558L6.46196 1.09019Z"
                                 fill="#222222" />
@@ -1344,10 +1266,7 @@
                 <div class="review">
                   <div class="review-sub">
                     <div class="review-sub1">
-                      <p>
-                        러쉬 클렌저 딴것들도 써봤는데 저한텐 허벌리즘이 제일 맞는것 같아요.정확히 무슨 효관지는
-                        모르겠는데 피부가 개운해지는 느낌이예요ㅋㅋ
-                      </p>
+                      <p>러쉬 클렌저 딴것들도 써봤는데 저한텐 허벌리즘이 제일 맞는것 같아요.정확히 무슨 효관지는 모르겠는데 피부가 개운해지는 느낌이예요ㅋㅋ</p>
                     </div>
                     <div class="review-sub2">
                       <span class="reviewer">oncl*****</span>
@@ -1445,10 +1364,7 @@
                 <div class="review">
                   <div class="review-sub">
                     <div class="review-sub1">
-                      <p>
-                        건조한 피부에 좋다고 해서 로즈잼으로 구매했는데 향이 너무 좋아요 !! 사용감도 좋고 굿 키마랑
-                        비슷한 것 같은데 계속 사용해 보려고요.
-                      </p>
+                      <p>건조한 피부에 좋다고 해서 로즈잼으로 구매했는데 향이 너무 좋아요 !! 사용감도 좋고 굿 키마랑 비슷한 것 같은데 계속 사용해 보려고요.</p>
                     </div>
 
                     <div class="review-sub2">
@@ -1612,15 +1528,13 @@
       </section>
       <!-- UpBtn -->
       <section class="upbtn-group">
-        <a href="#"><img src="images/jihye/up_btn/lushTimes_icon.png" alt="러쉬타임아이콘" width="80" /></a>
+        <a href="https://lushtimes.lush.com/view/399201020/"><img src="images/jihye/up_btn/lushTimes_icon.png" alt="러쉬타임아이콘" width="80" /></a>
         <div id="upBtn"><img src="images/jihye/up_btn/pageUp_icon.png" alt="탑아이콘" width="50" /></div>
       </section>
       <!-- modal -->
       <section class="modal" id="myModal">
         <div class="modal-content">
-          <span class="close-modal" id="closeModal"
-            ><img src="images/jihye/modal/modal_icon-x.png" alt="xicon" width="40"
-          /></span>
+          <span class="close-modal" id="closeModal"><img src="images/jihye/modal/modal_icon-x.png" alt="xicon" width="40" /></span>
           <img src="images/jihye/modal/modal_img.png" alt="모달이미지" />
         </div>
       </section>
