h,g 텍스트 영역 수정 완료, 상세페이지 작업중

--- a/index.html
+++ b/index.html
@@ -1437,7 +1437,7 @@
                   <div class="service-sub">
                     <p class="service-title">디지털 덕찌</p>
                     <span class="service-txt"
-                      >러쉬 만의 멤버십 뱃지 프로그램 덕찌력을 쌓아보세요!<br />
+                      >러쉬 만의 멤버십 <br />뱃지 프로그램 덕찌력을 쌓아보세요!<br />
                       특별한 선물이 준비되어 있어요.</span
                     >
                   </div>
