html 비주얼 코드 수정

--- a/index.html
+++ b/index.html
@@ -396,7 +396,6 @@
             <!-- 슬라이드1 -->
             <li class="swiper-slide">
               <img src="images/jihye/b_visual slide/m_b_visual slide_1.png" alt="가족피크닉 1920px" class="visual-de" />
-              <div class="">
                 <div class="box-txt">
                   <h4>소중한 가족과의 순간, 더 특별하게</h4>
                   <p>가족들과 즐기는 피크닉 속 러쉬 제품</p>
@@ -405,13 +404,11 @@
                   <div class="box-txt-wrap">
                     <img src="images/jihye/b_visual slide/btn_1.png" alt="버튼1" />
                   </div>
-                </div>
               </div>
             </li>
             <!-- 슬라이드2 -->
             <li class="swiper-slide">
               <img src="images/jihye/b_visual slide/m_b_visual slide_2.png" alt="유기농 1920px" class="visual-de" />
-              <div class="">
                 <div class="box-txt">
                   <h4>자연이 주는 유기농 제품</h4>
                   <p>러쉬는 자연에서 얻은 유기농 재료로 만듭니다.</p>
@@ -420,13 +417,11 @@
                   <div class="box-txt-wrap">
                     <img src="images/jihye/b_visual slide/btn_2.png" alt="버튼2" width="80" />
                   </div>
-                </div>
               </div>
             </li>
             <!-- 슬라이드3 -->
             <li class="swiper-slide">
               <img src="images/jihye/b_visual slide/m_b_visual slide_3.png" alt="사랑 1920px" class="visual-de" />
-              <div class="">
                 <div class="box-txt">
                   <h4>사랑을 닮은 향기, 러쉬와 함께</h4>
                   <p>달콤한 순간을 위한 핑크빛 감성.</p>
@@ -435,13 +430,11 @@
                   <div class="box-txt-wrap">
                     <img src="images/jihye/b_visual slide/btn_3.png" alt="버튼3" width="80" />
                   </div>
-                </div>
               </div>
             </li>
             <!-- 슬라이드4 -->
             <li class="swiper-slide">
               <img src="images/jihye/b_visual slide/m_b_visual slide_4.png" alt="나이트케어 1920px" class="visual-de" />
-              <div class="">
                 <div class="box-txt">
                   <h4>깊은 휴식을 위한 나이트 케어</h4>
                   <p>로즈 아르간 보디 컨디셔너</p>
@@ -450,7 +443,6 @@
                   <div class="box-txt-wrap">
                     <img src="images/jihye/b_visual slide/btn_4.png" alt="버튼4" width="80" />
                   </div>
-                </div>
               </div>
             </li>
           </ul>
@@ -466,7 +458,6 @@
             <!-- 슬라이드1 -->
             <li class="swiper-slide">
               <img src="images/jihye/b_visual slide/s_b_visual slide_1.png" alt="가족피크닉 1920px" class="visual-de" />
-              <div class="">
                 <div class="box-txt">
                   <h4>소중한 가족과의 순간, 더 특별하게</h4>
                   <p>가족들과 즐기는 피크닉 속 러쉬 제품</p>
@@ -475,13 +466,11 @@
                   <div class="box-txt-wrap">
                     <img src="images/jihye/b_visual slide/btn_1.png" alt="버튼1" />
                   </div>
-                </div>
               </div>
             </li>
             <!-- 슬라이드2 -->
             <li class="swiper-slide">
               <img src="images/jihye/b_visual slide/s_b_visual slide_2.png" alt="유기농 1920px" class="visual-de" />
-              <div class="">
                 <div class="box-txt">
                   <h4>자연이 주는 유기농 제품</h4>
                   <p>러쉬는 자연에서 얻은 유기농 재료로 만듭니다.</p>
@@ -490,13 +479,11 @@
                   <div class="box-txt-wrap">
                     <img src="images/jihye/b_visual slide/btn_2.png" alt="버튼2" width="80" />
                   </div>
-                </div>
               </div>
             </li>
             <!-- 슬라이드3 -->
             <li class="swiper-slide">
               <img src="images/jihye/b_visual slide/s_b_visual slide_3.png" alt="사랑 1920px" class="visual-de" />
-              <div class="">
                 <div class="box-txt">
                   <h4>사랑을 닮은 향기, 러쉬와 함께</h4>
                   <p>달콤한 순간을 위한 핑크빛 감성.</p>
@@ -505,13 +492,11 @@
                   <div class="box-txt-wrap">
                     <img src="images/jihye/b_visual slide/btn_3.png" alt="버튼3" width="80" />
                   </div>
-                </div>
               </div>
             </li>
             <!-- 슬라이드4 -->
             <li class="swiper-slide">
               <img src="images/jihye/b_visual slide/s_b_visual slide_4.png" alt="나이트케어 1920px" class="visual-de" />
-              <div class="">
               <div class="wrap-inner">
                 <div class="box-txt">
                   <h4>깊은 휴식을 위한 나이트 케어</h4>
@@ -522,7 +507,6 @@
                     <img src="images/jihye/b_visual slide/btn_4.png" alt="버튼4" width="80" />
                   </div>
                 </div>
-              </div>
             </li>
           </ul>
           <!-- <div class="swiper-pagination"></div>
@@ -1717,7 +1701,7 @@
       <section class="modal" id="myModal">
         <div class="modal-content">
           <img src="images/jihye/modal/modal_img.jpg" alt="모달이미지" />
-          <a href="#login.html" class="reviewbt"><button>리뷰작성하고 다양한 혜택 받기!</button></a>
+          <a href="#login.html" class="reviewbt">리뷰작성하고 다양한 혜택 받기!</a>
           <a class="close-modal" id="closeModal">닫기</a>
         </div>
       </section>
