--- a/index.html
+++ b/index.html
@@ -599,6 +599,7 @@
                   <div class="thumbnail">
                     <a href="#">
                       <img src="images/jisu/best/2.스위트 토크.png" alt="best 2" />
+                      <span class="number">2</span>
                     </a>
                   </div>
                   <div class="description">
@@ -656,6 +657,7 @@
                   <div class="thumbnail">
                     <a href="#">
                       <img src="images/jisu/best/3.체리 초콜릿.png" alt="best 3" />
+                      <span class="number">3</span>
                     </a>
                   </div>
                   <div class="description">
@@ -713,6 +715,7 @@
                   <div class="thumbnail">
                     <a href="#">
                       <img src="images/jisu/best/4.러브트립.png" alt="best 4" />
+                      <span class="number">4</span>
                     </a>
                   </div>
                   <div class="description">
@@ -770,6 +773,7 @@
                   <div class="thumbnail">
                     <a href="#">
                       <img src="images/jisu/best/5.포쉬 초콜릿.png" alt="best 5" />
+                      <span class="number">5</span>
                     </a>
                   </div>
                   <div class="description">
@@ -827,6 +831,7 @@
                   <div class="thumbnail">
                     <a href="#">
                       <img src="images/jisu/best/6.섹스 밤.png" alt="best 6" />
+                      <span class="number">6</span>
                     </a>
                   </div>
                   <div class="description">
@@ -884,6 +889,7 @@
                   <div class="thumbnail">
                     <a href="#">
                       <img src="images/jisu/best/1.두부.png" alt="best 7" />
+                      <span class="number">7</span>
                     </a>
                   </div>
                   <div class="description">
@@ -931,6 +937,7 @@
                   <div class="thumbnail">
                     <a href="#">
                       <img src="images/jisu/best/8.체리 온 탑.png" alt="best 8" />
+                      <span class="number">8</span>
                     </a>
                   </div>
                   <div class="description">
