-로그인 페이지 css중

--- a/index.html
+++ b/index.html
@@ -1707,7 +1707,7 @@
       <!-- modal -->
       <section class="modal" id="myModal">
         <div class="modal-content">
-          <img src="images/jihye/modal/modal_img.jpg" alt="모달이미지" />
+px/jihye/modal/modal_img.jpg" alt="모달이미지" />
           <a href="#login.html" class="reviewbt">리뷰작성하고 다양한 혜택 받기!</a>
           <a class="close-modal" id="closeModal">닫기</a>
         </div>
