--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
               <img src="images/jihye/a_header/icon/icon-x.png" class="mb-close" alt="닫기 아이콘" id="close-icon" />
             </a>
             <!--로고  -->
-            <a href="#index.html" class="logo">
+            <a href="index.html" class="logo">
               <img src="images/jihye/a_header/logo.svg" alt="로고" />
             </a>
             <!-- 메뉴 -->
@@ -111,16 +111,17 @@
               </ul>
             </nav>
           </div>
+
           <!-- 사용자 아이콘 -->
           <ul class="user">
             <li>
               <a href="#"><img src="images/jihye/a_header/icon/icon-search.png" alt="search" /></a>
             </li>
             <li>
-              <a href="#login.html"><img src="images/jihye/a_header/icon/icon-user.png" alt="user" /></a>
+              <a href="login.html"><img src="images/jihye/a_header/icon/icon-user.png" alt="user" /></a>
             </li>
             <li>
-              <a href="#"><img src="images/jihye/a_header/icon/icon-cart.png" alt="cart" /></a>
+              <a href="login.html"><img src="images/jihye/a_header/icon/icon-cart.png" alt="cart" /></a>
             </li>
           </ul>
         </div>
@@ -136,11 +137,11 @@
           <div class="login_form">
             <div class="id_input">
               <label for="id"></label>
-              <input type="text" placeholder="아이디" id="login-input"/>
+              <input type="text" placeholder="아이디" id="login-input" />
             </div>
             <div class="pw_input">
               <label for="pw"></label>
-              <input type="password" placeholder="비밀번호" id="login-input"/>
+              <input type="password" placeholder="비밀번호" id="login-input" />
             </div>
             <div class="id-save">
               <input type="checkbox" id="idSave" />
