--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <img src="images/jihye/a_header/icon/icon-x.png" class="mb-close" alt="닫기 아이콘" id="close-icon" />
             </a>
             <!--로고  -->
-            <a href="#index.html" class="logo">
+            <a href="index.html" class="logo">
               <img src="images/jihye/a_header/logo.svg" alt="로고" />
             </a>
             <!-- 메뉴 -->
@@ -200,10 +200,10 @@
               <a href="#"><img src="images/jihye/a_header/icon/icon-search.png" alt="search" /></a>
             </li>
             <li>
-              <a href="#login.html"><img src="images/jihye/a_header/icon/icon-user.png" alt="user" /></a>
+              <a href="login.html"><img src="images/jihye/a_header/icon/icon-user.png" alt="user" /></a>
             </li>
             <li>
-              <a href="#"><img src="images/jihye/a_header/icon/icon-cart.png" alt="cart" /></a>
+              <a href="login.html"><img src="images/jihye/a_header/icon/icon-cart.png" alt="cart" /></a>
             </li>
           </ul>
         </div>
@@ -1587,7 +1587,7 @@
           <div class="footer-left">
             <!-- 로고 -->
             <div class="footer-left-logo">
-              <a href="#index.html"><img src="images/jihye/i-footer/logo 1.png" alt="로고" width="70" /></a>
+              <a href="index.html"><img src="images/jihye/i-footer/logo 1.png" alt="로고" width="70" /></a>
             </div>
             <!-- 주소 1 -->
             <div class="footer-left-1">
@@ -1651,9 +1651,8 @@
         <div class="modal-content">
           <img src="images/jihye/modal/modal_img.jpg" alt="모달이미지" />
           <button class="reviewbt">
-            <a href="#login.html" >리뷰작성하고 다양한 혜택 받기!</a>
+            <a href="login.html" >리뷰작성하고 다양한 혜택 받기!</a>
           </button>
-
             <a class="close-modal" id="closeModal"> 
               <img src="images/jihye/modal/modal_icon-x.png" alt="모달 x아이콘" width="40"/>
             </a>
