-스와이퍼 이전화살표 작동안되는 문제, 토글탭 작동안되는 문제 해결 -최종수정 완료

--- a/index.html
+++ b/index.html
@@ -1214,8 +1214,8 @@
         <div class="wrap-inner">
           <h2>에디터 PICK!</h2>
           <div class="pick-btn">
-            <button class="pickBtn" id="freshBtn" onclick="openTab('fresh', this)">프레쉬4</button>
-            <button class="pickBtn" id="careBtn" onclick="openTab('care', this)">보습케어</button>
+            <button class="pickBtn" id="freshBtn" data-id="fresh">프레쉬4</button>
+            <button class="pickBtn" id="careBtn" data-id="care">보습케어</button>
           </div>
           <div class="pick-box" id="fresh">
             <div class="pick-banner">
