--- a/login.html
+++ b/login.html
@@ -199,10 +199,16 @@
             </div>
             <ul class="other-login">
               <li class="kakao-login-btn">
-                <a href="#"><img src="images/jisu/tag/kakao-logo.png" alt="카카오로 로그인" class="kakao-login"/> 카카오로 로그인</a>
+                <div class="kakao-login-wrap">
+                  <img src="images/jisu/tag/kakao-logo.png" alt="카카오로 로그인" class="kakao-login" />
+                  <a href="#"> 카카오로 로그인</a>
+                </div>
               </li>
               <li class="naver-login-btn">
-                <a href="#"><img src="images/jisu/tag/naver_white.png" alt="네이버로 로그인" class="naver-login" /> 네이버로 로그인</a>
+                <div class="naver-login-wrap">
+                  <img src="images/jisu/tag/naver_white.png" alt="네이버로 로그인" class="naver-login" />
+                  <a href="#"> 네이버로 로그인</a>
+                </div>
               </li>
             </ul>
           </div>
