--- a/login.html
+++ b/login.html
@@ -186,7 +186,7 @@
               <input type="checkbox" id="idSave" />
               <label for="idSave">아이디저장</label>
             </div>
-            <button type="submit" class="login-btn">로그인</button>
+            <button type="submit" class="login-btn">로그인하기</button>
             <div class="login_intro">
               <ul class="login_sch">
                 <li><a href="#">아이디 찾기</a></li>
