--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Open Graph 프로토콜에서 사용되는 메타 태그의 속성 중 하나로, 
       페이지의 간략한 설명을 제공하는 데 사용 -->
     <!-- 소셜 미디어에서 공유될 때 사용되는 URL -->
-    <meta property="og:url" content="https://numberone-one.vercel.app/" />
+    <meta property="og:url" content="https://mini-project-rush.vercel.app/" />
     <!-- 소셜 미디어에서 페이지가 공유될 때 표시되는 이미지 -->
     <meta
       property="og:image"
