--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="css/detail.css" />
     <!-- 제이쿼리 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
+    <script src="js/login.js"></script>
     <!-- Swiper JS -->
     <script src="js/detail.js"></script>
     <title>LUSH-numberone Login</title>
@@ -173,14 +173,14 @@
             <img src="images/jisu/login/login_lush_logo.png" alt="lush-logo" />
             <h3>로그인</h3>
           </div>
-          <div class="login_form">
+          <form class="login_form">
             <div class="id_input">
               <label for="id"></label>
-              <input type="text" placeholder="아이디" id="login-input" />
+              <input type="text" placeholder="아이디" id="id-input" class="id" />
             </div>
             <div class="pw_input">
               <label for="pw"></label>
-              <input type="password" placeholder="비밀번호" id="login-input" />
+              <input type="password" placeholder="비밀번호" id="pw-input" class="pw" />
             </div>
             <div class="id-save">
               <input type="checkbox" id="idSave" />
@@ -211,7 +211,7 @@
                 </div>
               </li>
             </ul>
-          </div>
+          </form>
         </div>
       </div>
       <!-- i_footer -->
